NGSTACK-493 Prepare translations

--- a/bundle/Resources/views/ezadminui/js_templates.html.twig
+++ b/bundle/Resources/views/ezadminui/js_templates.html.twig
@@ -50,6 +50,10 @@
         'interactions_quick_upload': "{{ "ngrm.edit.vue.interactions.quick_upload"|trans }}",
         'preview_alternate_text': "{{ "ngrm.edit.vue.preview.alternate_text"|trans }}",
         'preview_size': "{{ "ngrm.edit.vue.preview.size"|trans }}",
+        'editor_insert_variations_original_image': "{{ "ngrm.edit.vue.editor_insert.variations.original_image"|trans }}",
+        'editor_insert_title': "{{ "ngrm.edit.vue.editor_insert.title"|trans }}",
+        'editor_insert_insert_button': "{{ "ngrm.edit.vue.editor_insert.button.insert"|trans }}",
+        'editor_insert_cancel_button': "{{ "ngrm.edit.vue.editor_insert.button.insert"|trans }}",
     };
 
     RemoteMediaSelectedImage_{{ fieldId }} = {
